# insiderZ

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
src/insider_flow/: __init__.py  dashboard.py  parsing.py  partitions.py  resources.py  schema.py  utils.py
src/insider_flow/assets/: __init__.py  debug.py  download_filings.py  enrichtment.py  ingestion.py  signals.py  transformation.py
