[project]
name = "insider-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adlfs>=2025.8.0",
    "dagster>=1.12.8",
    "dagster-webserver>=1.12.8",
    "duckdb>=1.4.3",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tenacity>=9.1.2",
    "yfinance>=1.0",
]
